# agent-firewall

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.zh-CN.md  app.js  index.html  pyproject.toml  styles.css
.github/: release.yml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: DEPLOYMENT.md
docs/adoption/: CONTROL_COMPARISON.md  LOG_ONLY_ROLLOUT.md  QUICKSTART_60S.md  WHO_SHOULD_USE.md
docs/alpha/: RELEASE_READINESS.md  SUPPORTED_PATH.md
docs/assets/: runtime-support-manifest.json
docs/strategy/: ADAPTER_CAPABILITY_MATRIX.md  APPLICATION_ADOPTION.md  IMPLEMENTATION_1_1.md  ISSUE_BACKLOG_1_3.md  MULTI_RUNTIME_ROADMAP.md  OPENAI_AGENTS_ADAPTER_PLAN.md  POSITIONING.md  PRODUCT_DIRECTION.md  PRODUCT_STATUS.md  PROJECT_GOALS.md  PROJECT_SUMMARY.md  RELEASE_1_1_PLAN.md  RELEASE_1_3_PLAN.md  TRIAL_RUN_LOG.md
docs/trust/: BENCHMARKS.md  FALSE_POSITIVES.md  POLICY_TUNING.md
examples/: README.md  _openai_agents_fake_model.py  attack_scenarios.py  core_runtime_demo.py  demo_agent.py  generic_preview_demo.py  generic_tool_dispatcher.py  langgraph_agent.py  langgraph_quickstart.py  langgraph_trial_run.py  log_only_rollout.py  openai_agents_demo.py  openai_agents_quickstart.py  policy_reuse_demo.py  without_vs_with_firewall.py
scripts/: benchmark_overhead.py
src/agentfirewall/: __init__.py  approval.py  audit.py  config.py  events.py  exceptions.py  firewall.py  generic.py  langgraph.py  mcp.py  models.py  openai_agents.py  policy.py  policy_packs.py  runtime_context.py  runtime_support.py  serialization.py
src/agentfirewall/enforcers/: __init__.py  files.py  http.py  resources.py  subprocess.py  tools.py
src/agentfirewall/evals/: __init__.py  contracts.py  generic.py  (+5 more)
tests/: mcp_loopback.py  test_adapter_assembly.py  test_adapter_conformance.py  test_eval_contracts.py  test_generic_evals.py  test_generic_runtime.py  test_langgraph_evals.py  test_langgraph_integration.py  test_langgraph_surface_builder.py  test_langgraph_translator.py  test_mcp_evals.py  test_openai_agents_evals.py  test_openai_agents_integration.py  test_package.py  test_resource_access.py  test_runtime_support.py
tests/fixtures/: runtime_cases.json
(+14 files in other folders)
