[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfirewall"
version = "1.0.0"
description = "Runtime firewall for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/0xrem/agent-firewall"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"agentfirewall.evals" = ["cases/*.json"]

[project.optional-dependencies]
dev = ["pytest>=8"]
langgraph = [
  "langchain>=1,<2",
  "langgraph>=1,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
